--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVentaOtro/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVentaOtro/Index.cshtml
@@ -7,8 +7,6 @@
     @{
         ViewBag.Title = "Index";
     }
-    <link href="~/assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" rel="stylesheet" />
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
@@ -16,7 +14,6 @@
     <script type="text/javascript">
         $(function () {
             $('select').on('change', function () {
-      
                 $('#tblfilterable tbody tr').each(function () {
                     var value = $('#IdTipoFecha').find('option:selected').text();//get value to filter of selected
                     var hiderow = $(this).find("td").eq(10).html();//get value of column status
@@ -38,13 +35,11 @@
 
         $(document).ready(function () {
             $("#txtUtilidad").keyup(function () {
-                // debugger
 
                 var precio = $("#PrecioPMX").val();
                 var utilidad = $(this).val();
                 var operacion = parseFloat(precio) + parseFloat(utilidad);
                 $("#IdPrecioSalidaKg").val(operacion)
-
 
                 /*****factorLitrosaKilos*****/
                 var url = "/PrecioVenta/GetConfiguracionEmpresa";
@@ -58,7 +53,7 @@
             });//key up.
 
             $("#IdA").keyup(function () {
-                debugger
+
                 var from = $("#IdDe").val();
                 var To = $(this).val();
 
@@ -78,7 +73,7 @@
             });
         });
 
-    </script>   
+    </script>
 </head>
 <body style="height:100%">
     @using (Html.BeginForm("Registrar", "PrecioVentaOtro", FormMethod.Post))
@@ -95,7 +90,7 @@
                                         <select name="IdEmpresa" id="ddlEmpresas" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
                                             @foreach (var lst in ViewBag.Empresas)
                                             {
-                                                <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                            <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
                                             }
                                         </select>
                                     </div>
@@ -169,11 +164,11 @@
                                     <div class="form-group">
                                         Fecha programada:
                                         <div class="input-group">
-                                            @*<span class="input-group-addon">
-                                                    <i class="zmdi zmdi-calendar"></i>
-                                                </span>*@
-                                            @*<input type="text" id="datepicker" class="form-control datepicker"/>*@
-                                            @Html.EditorFor(m => m.FechaProgramada, new { htmlAttributes = new { @class = "datepicker" } })
+                                            <span class="input-group-addon">
+                                                <i class="zmdi zmdi-calendar"></i>
+                                            </span>
+                                            <input type="text" class="form-control date" placeholder="formato: dd/mm/aaaa" />
+
                                         </div>
                                     </div>
                                 </div>
@@ -200,12 +195,21 @@
                                     </div>
                                     <div class="col-sm-3">
                                         <b>De:</b>
-                                        <input type="text" class="form-control" />
+                                        <div class="input-group">
+                                            <span class="input-group-addon">
+                                                <i class="zmdi zmdi-calendar"></i>
+                                            </span>
+                                            <input type="text" id="IdDe" class="form-control date" placeholder="formato: dd/mm/aaaa" />
+                                        </div>
                                     </div>
-
                                     <div class="col-sm-3">
                                         <b>A:</b>
-                                        <input type="text" class="form-control" />
+                                        <div class="input-group">
+                                            <span class="input-group-addon">
+                                                <i class="zmdi zmdi-calendar"></i>
+                                            </span>
+                                            <input type="text" class="form-control date" placeholder="formato: dd/mm/aaaa" />
+                                        </div>
                                     </div>
                                 </div>
                                 <br />
@@ -238,7 +242,7 @@
                                                                 <td>@item.Empresa</td>
                                                                 <td>@item.Categoria</td>
                                                                 <td>@item.Linea</td>
-                                                                <td>@item.Producto</td>                                                             
+                                                                <td>@item.Producto</td>
                                                                 <td>@item.CategoriaProducto</td>
                                                                 <td>@item.PrecioActual</td>
                                                                 <td>@item.PrecioSalida</td>
@@ -260,15 +264,28 @@
                                         </div>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
-                        @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
+                        @if (ViewBag.MensajeError != null)
                         {
-
+                            <div class="row clearfix">
+                                <div id="divMensajeError" class="container">
+                                    <div class="alert alert-danger">
+                                        <div class="alert-icon">
+                                            <i class="zmdi zmdi-block"></i>
+                                        </div>
+                                        <strong>
+                                            <label>@ViewBag.MensajeError</label>
+                                        </strong>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                        @*@if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
+                        {
                             <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
                                  role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
+                                bottom: 20px; left: 0px; right: 0px;">
                                 <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
                                 <span data-notify="icon"></span>
                                 <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
@@ -279,13 +296,12 @@
                         {
                             <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
                                  role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
+                                bottom: 20px; left: 0px; right: 0px;">
                                 <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
                                 <span data-notify="icon"></span>
                                 <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
                             </div>
-                        }
-
+                        }*@
                     </div>
                 </div>
             </div>
